2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* Billboard110.wrl: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl: 

2013-07-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* WalkViewer.wrl:
	* Billboard110.wrl: 

2013-07-04  Holger Seelig  <holger.seelig@yahoo.de>

	* WalkViewer.wrl:
	* BrowserOptions.wrl: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Billboard110.wrl: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard100.wrl:
	* Billboard010.wrl: 

2013-07-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Billboard100.wrl:
	* Billboard010.wrl: 

2013-07-02  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Billboard.wrl:
	* Billboard100.wrl: 

2013-07-01  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Fields.wrl:
	* globe.jpg:
	* stripe.png:
	* vrmlbanner.wrl:
	* ParticleGroup.wrl:
	* tonerow3d_16_22.wav: 

2013-06-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* index.wrl:
	* MFNode.wrl:
	* Particle.wrl:
	* MFTime.wrl:
	* MFNode.wrl:
	* SFBool.wrl:
	* SFTime.wrl:
	* SFNode.wrl:
	* MFBool.wrl:
	* SFImage.wrl:
	* SFInt32.wrl:
	* SFVec2d.wrl:
	* MFFloat.wrl:
	* SFColor.wrl:
	* SFFloat.wrl:
	* SFVec4d.wrl:
	* SFVec4f.wrl:
	* MFColor.wrl:
	* SFVec2f.wrl:
	* SFVec3d.wrl:
	* SFVec3f.wrl:
	* MFVec4f.wrl:
	* MFVec2f.wrl:
	* MFVec3d.wrl:
	* MFImage.wrl:
	* MFVec2d.wrl:
	* MFVec3f.wrl:
	* MFVec4d.wrl:
	* MFInt32.wrl:
	* ParticleGroup.wrl:
	* MFDouble.wrl:
	* SFString.wrl:
	* MFString.wrl:
	* SFDouble.wrl:
	* MFMatrix4f.wrl:
	* MFRotation.wrl:
	* MFMatrix3d.wrl:
	* MFMatrix3f.wrl:
	* MFMatrix4d.wrl:
	* SFMatrix4d.wrl: