@@ -1,10 +1,8 @@
 #VRML V2.0 utf8
 
 Background {
-  skyAngle [ 0.8, 1.3, 1.4, 1.5708 ]
-  skyColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
-  groundAngle [ 0.6, 1.2, 1.3, 1.5708 ]
-  groundColor [ 0.21 0.31 0.59, 0.33 0.45 0.7, 0.57 0.66 0.85, 0.6 0.73 0.89, 0.7 0.83 0.98 ]
+    skyAngle 1.7
+    skyColor [ 1 1 0, 0 0 1 ]
 }
 
 Transform {
