@@ -1,5 +1,10 @@
 2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBackgroundNode.h:
+	* X3DBackgroundNode.cpp: 
+
+2013-07-06  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* ArcClose2D.cpp:
 	* RenderingProperties.cpp:
 	* X3DBackgroundNode.cpp: 
